# sift

./: .envrc  .gitignore  .siftignore  AGENTS.md  ARCHITECTURE.md  BENCH.md  CONFIGURATION.md  CONSTITUTION.md  Cargo.toml  EVALS.md  EVALUATION.md  EVALUATIONS.md  INSTRUCTIONS.md  LIBRARY.md  LICENSE  README.md  RELEASE.md  RESEARCH.md  USER_GUIDE.md  WORLD.md  build.rs  debug_tensors.rs  flake.nix  justfile  keel.toml
.github/workflows/: ci.yml  release.yml
.justfiles/: bench.just  dataset.just  eval.just  keel.just
.keel/: README.md  flow_history.json  heartbeat
.keel/adrs/: VDzNOMF7T-modular-engine-architecture.md  VDzNPELXy-agentic-turn-protocol-and-multi-modal-emission.md
.keel/adrs/VE1HqhVsi/: README.md
.keel/bearings/1vzJVa000/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md  SURVEY.md
.keel/bearings/1vzMXf000/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md  SURVEY.md
.keel/bearings/1vzSne000/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md  SURVEY.md
.keel/bearings/1vzXLN000/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md  SURVEY.md
.keel/bearings/1vzfew000/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/1vziaX000/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VDQgTTtv7/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VDVQurZER/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/epics/1vzGCU000/: PRD.md  README.md
.keel/epics/1vzJVa000/: PRD.md  README.md
.keel/epics/1vzMXf000/: PRD.md  README.md
.keel/epics/1vzNFk000/: PRD.md  README.md
.keel/epics/1vzSne000/: PRD.md  README.md
.keel/epics/1vzXLN000/: PRD.md  README.md
.keel/epics/1vzfew000/: PRD.md  README.md
.keel/epics/1vziaX000/: PRD.md  README.md
.keel/epics/VDPy8MNer/: PRD.md  README.md
.keel/epics/VDQ8Ll4DX/: PRD.md  README.md
.keel/epics/VDQEsPjsm/: PRD.md  README.md
.keel/epics/VDQgTTtv7/: PRD.md  README.md
.keel/epics/VDVQurZER/: PRD.md  README.md
.keel/epics/VDVkH5a6M/: PRD.md  README.md
.keel/epics/VDWjylxX2/: PRD.md  README.md
.keel/epics/VDWyNSW9x/: PRD.md  README.md
.keel/epics/VE1xUOaxK/: PRD.md  README.md
.keel/epics/VF1VhxmqI/: PRD.md  README.md
.keel/epics/VF1Vhy2qJ/: PRD.md  README.md
.keel/epics/VF1VhyGqK/: PRD.md  README.md
.keel/epics/VF53stqXt/: PRD.md  README.md
.keel/epics/VF53su1Xu/: PRD.md  README.md
.keel/epics/VF53suDXv/: PRD.md  README.md
.keel/epics/VFC7H4QFx/: PRD.md  README.md
.keel/epics/VFC7H4QFy/: PRD.md  README.md
.keel/epics/VFC7H4pFw/: PRD.md  README.md
.keel/epics/VFD8KR44d/: PRD.md  README.md
.keel/epics/VFD8NgvJl/: PRD.md  README.md
.keel/epics/VFD8ORnLV/: PRD.md  README.md
.keel/epics/VFD8P8CO4/: PRD.md  README.md
.keel/epics/VFO1icY5Z/: PRD.md  README.md
.keel/epics/VFkJD2NwK/: PRD.md  README.md
.keel/epics/VFlF7aHQw/: PRD.md  README.md
.keel/epics/VFnCKDDhj/: PRD.md  README.md
.keel/epics/VFnGRPtQQ/: PRD.md  README.md
.keel/epics/VG7WSIxMB/: PRD.md  README.md
.keel/epics/VG8oL9Xok/: PRD.md  README.md
.keel/knowledge/: 1vzLO0001.md  1vzLal000.md  1vzMBJ000.md  1vzMBJ001.md  1vzMmS000.md  1vzN83000.md  1vzNKa000.md  VDQgtJDvs.md  VDQmKRtRl.md
.keel/missions/VDPxuxum3/: CHARTER.md  CHILDREN.md  LOG.md  README.md
.keel/missions/VDQ8IlX52/: CHARTER.md  LOG.md  README.md
.keel/missions/VDQEoulWx/: CHARTER.md  LOG.md  README.md
.keel/missions/VDQgRlnv4/: CHARTER.md  CHILDREN.md  LOG.md  README.md
.keel/missions/VDVQuqwBr/: CHARTER.md  CHILDREN.md  LOG.md  README.md
.keel/missions/VDVkDRlhw/: CHARTER.md  LOG.md  README.md
.keel/missions/VDWjwvfVV/: CHARTER.md  LOG.md  README.md
.keel/missions/VDWyHUvoQ/: CHARTER.md  LOG.md  README.md
.keel/missions/VE1xO97NW/: CHARTER.md  LOG.md  README.md
.keel/missions/VF1UOlGfX/: CHARTER.md  LOG.md  README.md
.keel/missions/VF53stgXs/: CHARTER.md  CHILDREN.md  LOG.md  README.md
.keel/missions/VFC7FgLCO/: CHARTER.md  LOG.md  README.md
.keel/missions/VFD8IjQ0R/: CHARTER.md  LOG.md  README.md
.keel/missions/VFO1XfDM9/: CHARTER.md  LOG.md  README.md
.keel/missions/VFkJD1xwQ/: CHARTER.md  LOG.md  README.md
.keel/missions/VFlFASCri/: CHARTER.md  LOG.md  README.md
.keel/missions/VFnC94a5Y/: CHARTER.md  LOG.md  README.md
.keel/missions/VFnGRPZQR/: CHARTER.md  LOG.md  README.md
.keel/missions/VG7WSJBM9/: CHARTER.md  LOG.md  README.md
.keel/missions/VG8oL9pon/: CHARTER.md  LOG.md  README.md
.keel/stories/1vzGCp000/: README.md  REFLECT.md  manifest.yaml
.keel/stories/1vzJfc000/: README.md  REFLECT.md  manifest.yaml
.keel/stories/1vzJfp000/: README.md  REFLECT.md  manifest.yaml
.keel/stories/1vzJfv000/: README.md  REFLECT.md  manifest.yaml
.keel/stories/1vzMe4000/: README.md  REFLECT.md  manifest.yaml
.keel/stories/1vzMeH000/: README.md  REFLECT.md  manifest.yaml
.keel/stories/1vzMeL000/: README.md  REFLECT.md  manifest.yaml
.keel/stories/1vzNHY000/: README.md  REFLECT.md  manifest.yaml
.keel/stories/1vzSvm000/: README.md  REFLECT.md  manifest.yaml
benches/: search_bench.rs
examples/sift-embed/: Cargo.toml  README.md
src/: bench.rs  cache.rs  config.rs  dense.rs  eval.rs  extract.rs  facade.rs  hybrid.rs  lib.rs  main.rs  model.rs  optimize.rs  search.rs  segment.rs  system.rs  vector.rs  versioning.rs
src/cache/: breadcrumb.rs  frontier.rs  mod.rs  model.rs  sector.rs  store.rs
src/search/: application.rs  corpus.rs  domain.rs  engine.rs  graph.rs  legacy.rs  mod.rs  planner.rs  presentation.rs
tests/: agentic_eval_test.rs  autonomous_heuristic_planner_test.rs  autonomous_planner_contract_test.rs  cli_agent_search_test.rs  library_facade_test.rs  model_preparation_test.rs  performance_test.rs
wix/: main.wxs
(+557 files in other folders)
