[package]
name = "sift"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
blake3 = "1.8.3"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
flate2 = { version = "1.1.9", features = ["rust_backend"], default-features = false }
fs2 = "0.4.3"
html2text = "0.15.3"
ignore = "0.4.25"
pdf-extract = "0.10.0"
rayon = "1.11.0"
rust_tokenizers = { version = "8.1.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.3"
toml = "1.0.6"
undoc = "0.1.15"
ureq = "3.2.0"
walkdir = "2.5.0"
xz2 = { version = "0.1.7", features = ["static"] }

[dev-dependencies]
tempfile = "3.26.0"

[features]
