[package]
name = "sift"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
blake3 = "1.8.3"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
flate2 = { version = "1.1.9", features = ["rust_backend"], default-features = false }
fs2 = "0.4.3"
html2text = "0.15.3"
ignore = "0.4.25"
memmap2 = "0.9.10"
pdf-extract = "0.10.0"
rayon = "1.11.0"
rust_tokenizers = { version = "8.1.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.3"
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
undoc = "0.1.15"
ureq = "3.2.0"
walkdir = "2.5.0"
wide = "1.1.1"
xz2 = { version = "0.1.7", features = ["static"] }

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.26.0"

[features]

[[bench]]
name = "search_bench"
harness = false

# Config for 'cargo dist'
[package.metadata.dist]
# The preferred cargo-dist version to use in CI (checked by pipelines)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each release
installers = ["shell", "powershell", "deb", "rpm", "dmg", "msi", "homebrew"]
# Target platforms to build apps for (Rust target-triples)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "aarch64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = []
# Whether to install an updater program
install-updater = true

[package.metadata.dist.homebrew]
tap = "rupurt/homebrew-tap"
