[package]
name = "sift"
version = "0.2.0"
edition = "2024"
authors = ["Alex Kwiatkowski"]
description = "Standalone hybrid search CLI for fast document retrieval in agentic coding workflows"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rupurt/sift"
homepage = "https://github.com/rupurt/sift"

[package.metadata.wix]
upgrade-guid = "ADD48BF5-10C3-4F19-ADDC-2662BB2C4AE7"
path-guid = "C85A99E3-E620-44A5-A651-EBBDC3606722"
license = false
eula = false

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
blake3 = "1.8.3"
candle-core = { git = "https://github.com/woodRock/candle", branch = "feat-qwen3.5-support" }
candle-nn = { git = "https://github.com/woodRock/candle", branch = "feat-qwen3.5-support" }
candle-transformers = { git = "https://github.com/woodRock/candle", branch = "feat-qwen3.5-support" }
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
flate2 = { version = "1.1.9", features = ["rust_backend"], default-features = false }
fs2 = "0.4.3"
html2text = "0.15.3"
ignore = "0.4.25"
memmap2 = "0.9.10"
pdf-extract = "0.10.0"
rayon = "1.11.0"
rust_tokenizers = { version = "8.1.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.3"
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
undoc = "0.1.15"
ureq = "3.2.0"
walkdir = "2.5.0"
wide = "1.1.1"
xz2 = { version = "0.1.7", features = ["static"] }

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.26.0"

[features]

[[bench]]
name = "search_bench"
harness = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# Keep the generated release workflow intentionally customized for SHA stamping.
allow-dirty = ["ci"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Whether to install an updater program
install-updater = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[workspace.metadata.dist.homebrew]
tap = "rupurt/homebrew-tap"

[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-24.04"
aarch64-apple-darwin = "macos-15"
aarch64-unknown-linux-gnu = "ubuntu-24.04-arm"
x86_64-apple-darwin = "macos-15-intel"
x86_64-pc-windows-msvc = "windows-2022"
x86_64-unknown-linux-gnu = "ubuntu-24.04"
x86_64-unknown-linux-musl = "ubuntu-24.04"
